--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,700;1,500&family=Open+Sans:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -117,20 +118,35 @@
                 </div>
                 <div class="Navigation">
                     <h2>Navigation</h2>
-                    <ul>
-                        <li>Home</li>
-                        <li>Services</li>
-                        <li>Work</li>
-                        <li>About</li>
-                        <li>Blog</li>
-                    </ul>
-                    <ul>
-                        <li>Press</li>
-                        <li>Blog</li>
-                        <li>Contact</li>
-                        <li>Support</li>
-                        <li>Privacy</li>
-                    </ul>
+                    <div class="list">
+                        <div class="list-1">
+                            <ul>
+                                <li>Home</li>
+                                <li>Services</li>
+                                <li>Work</li>
+                                <li>About</li>
+                                <li>Blog</li>
+                            </ul>
+                        </div>
+                        <div class="list-2">
+                            <ul>
+                                <li>Press</li>
+                                <li>Blog</li>
+                                <li>Contact</li>
+                                <li>Support</li>
+                                <li>Privacy</li>
+                            </ul>
+                        </div>
+                       <div class="list-3">
+                        <ul>
+                            <li>Privacy</li>
+                            <li>FAQ</li>
+                            <li>Careers</li>
+                            <li>Procedur</li>
+                            <li>Team</li>
+                        </ul>
+                       </div>
+                    </div>
                 </div>
             </div>
         </footer>
